# drf-auth

./: creds.txt  db.sqlite3  docker-compose.yml  pyproject.toml
movies/: admin.py  models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_movie_author.py  0003_alter_movie_author.py  0004_alter_movie_author.py
theater/: settings.py  urls.py  wsgi.py
theater/theater/: asgi.py  settings.py  urls.py
